ProdIND/ProdPrograms/force-app/main/default/objects/Perfios_Institution_Master__c/Perfios_Institution_Master__c.object-meta.xml
<CustomObject>
    <description>This is a Master for List of Institutions for Perfios Scan Upload API. The Data is uploaded through Bulk Upload API</description>
    <label>Perfios Institution Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Perfios Institution Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>