ProdIND/ProdPrograms/force-app/main/default/objects/Perfios_Institution_Master__c/fields/institutionId__c.field-meta.xml
<CustomField>
    <fullName>institutionId__c</fullName>
    <label>institutionId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>