ProdIND/ProdPrograms/force-app/main/default/objects/Perfios_Institution_Master__c/fields/institutionType__c.field-meta.xml
<CustomField>
    <fullName>institutionType__c</fullName>
    <label>institutionType</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>